--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -389,7 +389,6 @@
                                     </button>
                                 </subviews>
                                 <animations/>
-                                <color key="backgroundColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="nsz-p9-p38" appends="YES" id="H4I-UK-mZ6"/>
@@ -462,14 +461,6 @@
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6l1-8x-81J">
-                                <rect key="frame" x="38" y="607" width="32" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Hide"/>
-                                <connections>
-                                    <action selector="hideDrawingView:" destination="Hcq-c3-RIz" eventType="touchUpInside" id="akf-dB-4o9"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" horizontalHuggingPriority="1" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cl6-Nt-RMz">
                                 <rect key="frame" x="189" y="597" width="50" height="50"/>
                                 <subviews>
@@ -501,9 +492,10 @@
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XrJ-aO-DHM">
-                                <rect key="frame" x="105" y="607" width="36" height="30"/>
+                                <rect key="frame" x="139" y="607" width="30" height="30"/>
                                 <animations/>
-                                <state key="normal" title="Clear"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="✨"/>
                                 <connections>
                                     <action selector="clearDrawing:" destination="Hcq-c3-RIz" eventType="touchUpInside" id="ery-SL-2FR"/>
                                     <action selector="clearDrawing:" destination="96O-5S-Syf" eventType="touchUpInside" id="l55-Ia-XUL"/>
