--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -341,11 +341,6 @@
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UkM-gm-guP" userLabel="Text View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <animations/>
-                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q0Y-g2-5N0" userLabel="Overlay View – Chrome only">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="116"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type something…" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H4j-rC-jmg">
                                         <rect key="frame" x="20" y="319" width="335" height="30"/>
@@ -358,10 +353,21 @@
                                             <action selector="beginEditingText:" destination="96O-5S-Syf" eventType="editingDidBegin" id="vtF-OZ-ivs"/>
                                             <action selector="endEditingText:" destination="96O-5S-Syf" eventType="editingDidEnd" id="KzJ-MJ-DYm"/>
                                             <outletCollection property="gestureRecognizers" destination="Osy-gJ-f6f" appends="YES" id="ds3-PD-6J4"/>
-                                            <outletCollection property="gestureRecognizers" destination="QEu-Wp-VNZ" appends="YES" id="wG5-xL-9jl"/>
                                             <outletCollection property="gestureRecognizers" destination="7ud-cU-hsP" appends="YES" id="gFV-z6-Qp5"/>
+                                            <outletCollection property="gestureRecognizers" destination="QEu-Wp-VNZ" appends="YES" id="wG5-xL-9jl"/>
                                         </connections>
                                     </textField>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="nsz-p9-p38" appends="YES" id="XR1-PE-Ulh"/>
+                                </connections>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q0Y-g2-5N0" userLabel="Overlay View – Chrome only" customClass="PassThroughView" customModule="Camera" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="116"/>
+                                <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONU-M2-ip9">
                                         <rect key="frame" x="305" y="33" width="50" height="50"/>
                                         <animations/>
@@ -386,9 +392,6 @@
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.14999999999999999" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="nsz-p9-p38" appends="YES" id="H4I-UK-mZ6"/>
-                                </connections>
                             </view>
                         </subviews>
                         <animations/>
@@ -404,6 +407,7 @@
                         <outlet property="temporaryDrawingImageView" destination="quY-6r-Zhn" id="UfK-xj-cN1"/>
                         <outlet property="textFieldPanGestureRecognizer" destination="Osy-gJ-f6f" id="CAQ-Qr-fy5"/>
                         <outlet property="textInputTextField" destination="H4j-rC-jmg" id="zro-w3-PCW"/>
+                        <outlet property="textView" destination="UkM-gm-guP" id="z9A-YD-gL2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1XQ-TL-dNx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -424,7 +428,7 @@
                 </pinchGestureRecognizer>
                 <tapGestureRecognizer id="nsz-p9-p38" userLabel="Tap to Add Text">
                     <connections>
-                        <action selector="toggleTextInput:" destination="96O-5S-Syf" id="c2c-jJ-nXI"/>
+                        <action selector="toggleTextInput:" destination="96O-5S-Syf" id="2ex-A8-bb6"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
