--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4ct-Ky-8pw">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
     </dependencies>
     <scenes>
@@ -184,21 +185,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Delete it!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pK-RU-ffq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete it!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pK-RU-ffq">
                                 <rect key="frame" x="0.0" y="50" width="375" height="21"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="pNJ-5A-ftS"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Keeeep it!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vTF-Cx-nyU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keeeep it!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vTF-Cx-nyU">
                                 <rect key="frame" x="0.0" y="596" width="375" height="21"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Pd0-Nr-dm4"/>
+                                    <constraint firstAttribute="height" constant="21" id="bHM-NA-uAS"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="bHM-NA-uAS"/>
+                                    </mask>
+                                </variation>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wfF-60-exu">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wfF-60-exu">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -210,6 +223,28 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wfF-60-exu" secondAttribute="trailing" id="1n8-Mc-1Xl"/>
+                            <constraint firstItem="wfF-60-exu" firstAttribute="top" secondItem="wIb-Vp-0L8" secondAttribute="top" id="AaP-qf-NCJ"/>
+                            <constraint firstAttribute="trailing" secondItem="vTF-Cx-nyU" secondAttribute="trailing" id="ElZ-Pu-pYL"/>
+                            <constraint firstItem="vTF-Cx-nyU" firstAttribute="leading" secondItem="wIb-Vp-0L8" secondAttribute="leading" id="HIb-rI-RaK"/>
+                            <constraint firstItem="ykY-V4-PB3" firstAttribute="top" secondItem="wfF-60-exu" secondAttribute="bottom" id="Lot-K8-FVW"/>
+                            <constraint firstItem="4pK-RU-ffq" firstAttribute="leading" secondItem="wIb-Vp-0L8" secondAttribute="leading" id="Y6G-Yc-qzy"/>
+                            <constraint firstItem="wfF-60-exu" firstAttribute="leading" secondItem="wIb-Vp-0L8" secondAttribute="leading" id="ZAk-Z1-lcL"/>
+                            <constraint firstAttribute="trailing" secondItem="4pK-RU-ffq" secondAttribute="trailing" id="bbJ-vw-up0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vTF-Cx-nyU" secondAttribute="trailing" constant="-20" id="eY9-X5-5uR"/>
+                            <constraint firstItem="ykY-V4-PB3" firstAttribute="top" secondItem="vTF-Cx-nyU" secondAttribute="bottom" constant="50" id="frv-8E-l5R"/>
+                            <constraint firstItem="4pK-RU-ffq" firstAttribute="top" secondItem="hJi-7f-EI2" secondAttribute="bottom" constant="30" id="n9t-OO-fR6"/>
+                            <constraint firstItem="vTF-Cx-nyU" firstAttribute="leading" secondItem="wIb-Vp-0L8" secondAttribute="leadingMargin" constant="-20" id="oV3-EQ-ygy"/>
+                            <constraint firstItem="ykY-V4-PB3" firstAttribute="top" secondItem="vTF-Cx-nyU" secondAttribute="bottom" constant="50" id="sIS-co-lME"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="eY9-X5-5uR"/>
+                                <exclude reference="oV3-EQ-ygy"/>
+                                <exclude reference="frv-8E-l5R"/>
+                            </mask>
+                        </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
